--- a/lib/css/zenburn.css
+++ b/lib/css/zenburn.css
@@ -11,6 +11,7 @@ based on dark.css by Ivan Sagalaev
   padding: 0.5em;
   background: #3f3f3f;
   color: #dcdcdc;
+  font-size:10px;
 }
 
 .hljs-keyword,
